@@ -19,6 +19,7 @@
    -  JWasmr.exe: option -Sz removed.
    -  PUSHW will emit warning "magnitude of offset exceeds 16-bit" if
       operand is a 32-bit offset.
+   -  using 'option oldmacros' will cause a warning only.
    
 
    09.06.2024, v2.18:
